--- a/src/app/application-onboarding/application/application-creation/application.component.less
+++ b/src/app/application-onboarding/application/application-creation/application.component.less
@@ -236,3 +236,107 @@ input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
 .apifailerror{
 	padding: 220px 0px;
 }
+p {
+	font-family: Lato;
+  }
+  
+  .border {
+	border:1px solid #ccc;
+	margin: 1rem 0;
+	padding: 0.25rem;
+	cursor: pointer;
+  }
+  
+  .drop {
+	border: 1px dashed #ccc;
+	padding: 1rem;
+  }
+  .example-container {
+	width: 180px;
+	max-width: 100%;
+	margin: 0 25px 25px 0;
+	display: inline-block;
+	vertical-align: top;
+  }
+  
+  .example-list {
+	border: solid 1px #ccc;
+	min-height: 20px;
+	background: white;
+	border-radius: 4px;
+	overflow: hidden;
+	display: block;
+  }
+  
+  .example-box {
+	padding: 10px 10px;
+	border-bottom: solid 1px #ccc;
+	color: rgba(0, 0, 0, 0.87);
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	box-sizing: border-box;
+	cursor: move;
+	background: white;
+	font-size: 14px;
+  }
+  
+  .cdk-drag-preview {
+	box-sizing: border-box;
+	border-radius: 4px;
+	box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+				0 8px 10px 1px rgba(0, 0, 0, 0.14),
+				0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  }
+  
+  .cdk-drag-placeholder {
+	opacity: 0;
+  }
+  
+  .cdk-drag-animating {
+	transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  }
+  
+  .example-box:last-child {
+	border: none;
+  }
+  
+  .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+	transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  }
+  
+.highlight {
+	background-color:#c3d0df;
+	font-weight: 800;
+  }
+  .active-service {
+	font-family: 'Avenir';
+	font-weight: 900;
+	color: #fff;
+	background: #95999d;
+}
+.configuration-effect {
+	// font-size: inherit;
+    // padding: 6px;
+    // background: #f5f6f7;
+	// font-weight: 300;
+	
+		color: #6a6969;
+		font-weight: 300;
+		padding-top: 8px;
+		background: #f5f6f7;
+		padding-bottom: 8px;
+		text-decoration: underline;
+
+	
+}
+.list-group-item.active {
+    color: #fff;
+    background-color: #20a8d8;
+    border-color: #20a8d8;
+}
+
+.list-group-item-action {
+    color: #5c6873;
+}
