--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.less
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.less
@@ -109,3 +109,20 @@
 .card-spacing > div{
     padding: 5px 12px !important;
     }
+    .widthParent100
+    {
+        width: 100%;
+        display:inline-block;
+    }
+    .inlineDisplay
+    {
+        display: inline-table;;
+    }
+    .clusterHeight
+    {
+        max-height: 10000px !important;
+    }
+    .hide
+    {
+        display: none;
+    }
