--- a/src/app/visibility/visibility.component.html
+++ b/src/app/visibility/visibility.component.html
@@ -102,21 +102,27 @@
                                 <!-- Grid row -->
 
                                 <!-- Grid row -->
-                                <div class="form-group row" >
+                                <div class="form-group row" *ngIf="approvalWaitingStatus" >
                                     <!-- Default input -->
                                     <label class="col-sm-1 col-form-label">Comments:</label>
                                     <div class="col-sm-8">
                                         <!-- <textarea class="form-control" rows="3" formControlName="comments"></textarea> -->
-                                        <textarea class="form-control" rows="3"></textarea>
+                                        <textarea class="form-control" rows="3" name="approvalGateComment" #approvalGateComment="ngModel" ngModel ></textarea>
 
                                     </div>
 
                                     <div class="col-sm-1 mr-2 alignCommentBtn"><button type="button"
-                                            class="btn btn-success align-bottom" style="color: #fff;">Approve</button></div>
+                                            class="btn btn-success align-bottom" style="color: #fff;" (click)="approvalGateReview('Approve', approvalGateComment)">Approve</button></div>
                                             
                                     <div class="col-sm-1 mr-2 alignCommentBtn"><button type="button"
-                                            class="btn btn-danger align-bottom">Reject</button></div>
+                                            class="btn btn-danger align-bottom" (click)="approvalGateReview('Reject', approvalGateComment)">Reject</button></div>
                                 </div>
+
+                                <div class="form-group row" *ngIf="!approvalWaitingStatus" >
+                                  <h4>
+                                    {{approvalGateComment}}; <br /> Approved and Pending Request of previous Transactions.
+                                  </h4>..
+                                  </div>
                                 <!-- Grid row -->
 
 
