--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -200,7 +200,7 @@
                             <div class="d-flex  mr-4 align-items-center">
                               <input type="text" class="form-control input_len" formControlName="serviceName" 
                               [ngClass]="servicesForm.get('services')['controls'][i].get('serviceName').invalid && servicesForm.get('services')['controls'][i].get('serviceName').touched ? 'is-invalid':''">
-                              <button class="btn btn-primary ml-4" >Save</button>
+                              <button class="btn btn-primary ml-4" type="submit" (click)="saveServiceForm(i)" >Save</button>
                               <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
                               <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
                               <a class="text-muted ml-3 formarray_btn"  data-toggle="tooltip" data-placement="right" title="Delete Service" 
@@ -400,11 +400,17 @@
                                     </thead>
                                   </table>
                                   <div class="form-group mb-3 pl-1 text-muted">
+                                    <form [formGroup]="gateForm">
                                     <label>Gate Name</label>
                                     <div class="d-flex  mr-2 align-items-center">
-                                      <input type="text" class="form-control input_len" formControlName="serviceName" 
-                                      >
-                                   
+                                      <input type="text" class="form-control input_len" formControlName="gateName">
+                                      <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Update gate name">
+                                        <a data-keyboard="false" class="btn-link">
+                                          <i class="fas fa-pencil-alt"></i>
+                                        </a>
+                                      </span>
+                                      <button class="btn btn-primary ml-4" type="submit" (click)="saveGateForm(i)" >Save</button>
+                                      <!-- <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button> -->
                                       </div>
                                       <!-- <span *ngIf="servicesForm.get('services')['controls'][i].get('serviceName').invalid && servicesForm.get('services')['controls'][i].get('serviceName').touched"
                                       class="help-block">
@@ -413,10 +419,11 @@
                                       <span *ngIf="servicesForm.get('services')['controls'][i].get('serviceName').errors['startingFromNumber']">The service name must begin with a letter.</span>
                                       <span *ngIf="servicesForm.get('services')['controls'][i].get('serviceName').errors['symbols']">No Special characters are allowed.</span>
                                     </span> -->
+                                    </form>
                                   </div>
                                   <div class="form-group group_permission">
-                                    <div class="row" >
-                                      <div class="col-12">
+                                    <div class="row">
+                                      <!-- <div class="col-12">
                                         <form [formGroup]="environmentForm">
                                           <table class="table table-outline" formArrayName="environments">
                                             <thead>
@@ -470,11 +477,78 @@
                                             </tbody>
                                           </table>
                                         </form>
+                                      </div> -->
+                                      <div class="row" *ngIf="visibilityForm.value.visibilityConfig.length !== 0 ? true : false ">
+                                        <div class="col-12">
+                                          <form [formGroup]="visibilityForm">
+                                            <table class="table table-outline" formArrayName="visibilityConfig">
+                                              <thead>
+                                                <tr>
+                                                  <th>Tool type</th>
+                                                  <th>Account</th>
+                                                  <th>Template</th>
+                                                  <th class="text-right"><a (click)="addConnector()" data-toggle="tooltip" data-placement="top" data-original-title="Add New Connector"><i class="fas fa-plus"></i></a></th>
+                                                </tr>
+                                              </thead>
+                                              <tbody>
+                                                <tr *ngFor="let optionsArr of visibilityForm.get('visibilityConfig')['controls'];let i=index">
+                                                  <ng-container [formGroupName]="i">
+                                                    <td>
+                                                      <input type="text" class="form-control" formControlName="connectorType" 
+                                                      [ngClass]="!visibilityForm.get('visibilityConfig')['controls'][i].get('connectorType').valid && visibilityForm.get('visibilityConfig')['controls'][i].get('connectorType').touched ? 'is-invalid':''">
+                                                      <span *ngIf="!visibilityForm.get('visibilityConfig')['controls'][i].get('connectorType').valid && visibilityForm.get('visibilityConfig')['controls'][i].get('connectorType').touched"
+                                                      class="invalid-feedback">connectorType is required</span>
+
+                                                      
+
+                                                    </td>
+                                                    <td>
+                                                      <input type="text" class="form-control" formControlName="accountName">
+                                                    </td>
+                                                    <td>
+                                                      <div class="d-flex  mr-2 align-items-center">
+                                                      <input type="text" class="form-control" formControlName="templateName">
+                                                      <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Edit Metric Template" >
+                                                        <a data-toggle="modal" data-target="#newMatricTemplate" data-backdrop="static" data-keyboard="false" class="btn-link">
+                                                          <i class="fas fa-pencil-alt"></i>
+                                                        </a>
+                                                      </span>
+                                                      <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Add New Metric Template"  >
+                                                        <a data-toggle="modal" data-target="#newMatricTemplate" data-backdrop="static" data-keyboard="false" class="btn-link" >
+                                                          <i class="fas fa-plus"></i>
+                                                        </a>
+                                                      </span>
+                                                      </div>
+                                                    </td>
+                                                    <td>
+                                                      <div class="d-flex  mr-2 align-items-center">
+                                                      <span class="ml-2">
+                                                        <a class="text-muted formarray_btn" data-toggle="tooltip" data-placement="right" title="Save"
+                                                      (click)="saveConnector(i)">
+                                                        <i class="fa fa-save"></i>
+                                                      </a>
+                                                      </span>
+                                                      <span>
+                                                      <a class="text-muted formarray_btn"  data-toggle="tooltip" data-placement="right" title="Delete"
+                                                      (click)="removeConnector(i)">
+                                                        <i class="mt_custom-3 fas fa-trash-alt"></i></a>
+                                                        </span>
+                                                      </div>
+                                                      </td>
+                                                  </ng-container>
+                                                </tr>
+                                              </tbody>
+                                            </table>
+                                          </form>
+                                        </div>
+                                      </div>
+                                      <div class="col-6">
+                                        <a class="btn btn-link btn-link-black" *ngIf="visibilityForm.value.visibilityConfig.length === 0 ? true : false " (click)="addConnector()">Add Visibility Config</a>
                                       </div>
                                       <div class="col-12 pull-right">
                                         <div class="page_access text-right py-2 px-3">
                                           <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
-                                          <button class="btn btn-primary ml-2" (click)="SubmitApplicationForm()">Save</button>
+                                          <button class="btn btn-primary ml-2" (click)="SubmitVisibilityForm()">Save</button>
                                           <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
                                           <button class="btn btn-danger ml-1" (click)="cancelForm()">Delete</button>
                                         </div>
@@ -603,8 +677,8 @@
                   <div class="col-12">
                     <hr class="ml-0 mt-3 mb-3" />
                   </div>
-                  <ng-container>
-                    <div class="row">
+                  <ng-container *ngIf = "userGroupData.length > 0 && userGroupPermissions.length > 0">
+                    <div class="row" *ngIf="groupPermissionForm.value.userGroups.length !== 0 ? true : false ">
                       <div class="col-12">
                         <form [formGroup]="groupPermissionForm">
                           <table class="table table-outline" formArrayName="userGroups">
