--- a/src/app/visibility/visibility.component.less
+++ b/src/app/visibility/visibility.component.less
@@ -21,3 +21,38 @@
 .leftBox_body table td:first-child{
 	padding: 3px 5px 0px !important;
 }
+.active-service + tr{
+	background-color: #ccc;
+	td{
+		// border: 2px solid #ccc;
+		font-weight: bold;
+	}	
+
+}
+.gateNameSelection{
+	// background-color: #eee !important;
+	margin: 1px 5px 4px !important;
+	width: -webkit-fill-available;
+	td{
+		background-color: #fff !important;
+	}
+}
+.gateNametr{
+	background-color: #f1f1f1;
+}
+.approvalStatus{
+	border: 1px solid #eee;
+	width: 410px;
+	margin-bottom: 20px;
+	div{
+		background-color: #999;
+		color: #eee;
+		padding: 5px;
+		font-weight: bold;
+		display: inline-block;
+		width: 200px;
+	}
+	div + div{
+		background-color: #fff;
+	}
+}
