Feature - Application on boarding with visibility feature

--- a/src/styles.less
+++ b/src/styles.less
@@ -2087,3 +2087,20 @@ td .table-sm input, td .table-sm select, td .table-sm{
 	.border0::after .border0::before {
 		border:0px;
 	}
+
+	.tick-button{
+		border: 1px solid #b6babd;
+		padding: 5px 7px;
+		border-radius: 2px;		
+	}
+	.close-button{
+		border: 1px solid #b6babd;
+		padding: 5px 9px;
+		border-radius: 2px;		
+	}
+	.tick-button i {
+		color: gray;
+	}
+	.close-button i {
+		color: gray;
+	}
