--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -529,7 +529,7 @@
                                               </tr>
                                             </thead>
                                             <tbody>
-                                              <tr *ngFor="let optionsArr of visibilityForm.get('visibilityConfig')['controls'];let i=index">
+                                              <tr *ngFor="let optionsArr of visibilityForm.get('visibilityConfig')['controls'];let i=index" (mouseenter)="toolTypeRowHoverd[i] = true" (mouseleave)="toolTypeRowHoverd[i] = false">
                                                 <ng-container [formGroupName]="i">
                                                   <td>
                                                     <select class="form-control" formControlName="connectorType" (change)="onChangeTooltype($event.target.value)">
@@ -550,37 +550,40 @@
                                                     </select>                                                    
                                                   </td>
                                                   <td>
-                                                    <div class="d-flex  mr-2 align-items-center">                                                      
-                                                    <select class="form-control" formControlName="templateName" (change)="onChangeTemplateofTooltype($event.target.value)">
-                                                      <option value="" [disabled]="true">Select</option>                                                       
-                                                      <option *ngFor="let template of templatesForToolType" value="{{template.id}}" >
-                                                          {{template.name}}</option>
-                                                    </select>
-                                                    <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Edit Template" >
-                                                      <a data-toggle="modal" data-target="#newMatricTemplate" data-backdrop="static" data-keyboard="false" class="btn-link">
-                                                        <i class="fas fa-pencil-alt"></i>
-                                                      </a>
-                                                    </span>
-                                                    <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Add New Template"  >
-                                                      <a data-toggle="modal" data-target="#newTemplateForTooltype" data-backdrop="static" data-keyboard="false" class="btn-link" >
-                                                        <i class="fas fa-plus"></i>
-                                                      </a>
-                                                    </span>
-                                                    </div>
-                                                  </td>
-                                                  <td>
-                                                    <div class="d-flex  mr-2 align-items-center">
-                                                    <span class="ml-2">
-                                                      <a class="text-muted formarray_btn" data-toggle="tooltip" data-placement="right" title="Save" (click)="saveConnector(i)">
-                                                      <i class="fa fa-save"></i>
-                                                    </a>
-                                                    </span>
-                                                    <span>
-                                                    <a class="text-muted formarray_btn"  data-toggle="tooltip" data-placement="right" title="Delete" (click)="removeConnector(i)">
-                                                      <i class="mt_custom-3 fas fa-trash-alt"></i></a>
+                                                    <div class="d-flex  mr-2 align-items-center position-relative">                                                      
+                                                      <select class="form-control template-dropdown" formControlName="templateName" (change)="onChangeTemplateofTooltype($event.target.value, i)">
+                                                        <option value="" [disabled]="true">Select</option>                                                       
+                                                        <option *ngFor="let template of templatesForToolType" value="{{template.id}}" >
+                                                            {{template.name}}</option>
+                                                        <option value="+">+ Add Template</option>   
+                                                      </select>
+                                                      <span class="ml-2 editTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Edit Template" *ngIf="templateId[i]">
+                                                        <a data-toggle="modal" data-target="#newMatricTemplate" data-backdrop="static" data-keyboard="false" class="btn-link">
+                                                          <i class="fas fa-pencil-alt"></i>
+                                                        </a>
+                                                      </span>
+                                                      <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Add New Template" [hidden]="true" >
+                                                        <a data-toggle="modal" data-target="#newTemplateForTooltype" data-backdrop="static" data-keyboard="false" class="btn-link" #newtemplate>
+                                                          <i class="fas fa-plus"></i>
+                                                        </a>
                                                       </span>
                                                     </div>
-                                                    </td>
+                                                  </td>
+                                                  <td class="hover-buttons-td">
+                                                    <div class="d-flex  mr-2 align-items-center" *ngIf="toolTypeRowHoverd[i]">
+                                                      <span class="ml-2 mt-1">
+                                                        <a class="text-muted formarray_btn" data-toggle="tooltip" data-placement="top" title="Save"
+                                                          (click)="saveConnector(i)">
+                                                          <i class="fa fa-save"></i>
+                                                        </a>
+                                                      </span>
+                                                      <span class="ml-2 mt-1">
+                                                        <a class="text-muted formarray_btn" data-toggle="tooltip" data-placement="top" title="Delete"
+                                                          (click)="removeConnector(i)">
+                                                          <i class="fas fa-trash-alt"></i></a>
+                                                      </span>
+                                                    </div>
+                                                  </td>
                                                 </ng-container>
                                               </tr>
                                             </tbody>
@@ -886,7 +889,31 @@
           <div class="tab-content" id="myTabContent">
             <div id="tooltype-template-form" role="tabpanel" aria-labelledby="tooltype-template-form-tab">         
               <div class="col-12 maindiv" *ngIf = "selectedTTTemplateTab === 'tooltype-template-form'">
-                  Form will go here
+                <div class="col-6 p-3">
+                  <form [formGroup]="toolTemplateForm">
+                    <div class="form-group">
+                      <label>Tool Type:</label>
+                      <input type="text" appLowercase class="form-control" formControlName="toolType" [readonly]="true">
+                    </div>
+                    <div class="form-group">
+                      <label>Name:</label>
+                      <input type="text" class="form-control" formControlName="name"
+                        [ngClass]="toolTemplateForm.get('name').invalid && toolTemplateForm.get('name').touched ? 'is-invalid':''">
+                      <span *ngIf="toolTemplateForm.get('name').invalid && toolTemplateForm.get('name').touched" class="invalid-feedback">
+                        <span *ngIf="toolTemplateForm.get('name').errors['required']">Name is required</span>
+                      </span>
+                    </div>
+                    <div class="form-group">
+                      <label>Template</label>
+                      <textarea class="form-control" rows="3" formControlName="template"></textarea>
+                    </div>
+                  </form>
+                </div>
+                <div class="col-7 p-3">
+                  <div class="page_access text-right">
+                    <button class="btn btn-primary ml-2" (click)="saveToolTypeTemplateForm()">Save</button>                
+                  </div>
+                </div>
                </div>                
             </div>
             <div id="tooltype-template-editor" role="tabpanel" aria-labelledby="tooltype-template-editor-tab">          
