--- a/src/app/application-onboarding/application/application-creation/application.component.less
+++ b/src/app/application-onboarding/application/application-creation/application.component.less
@@ -360,3 +360,14 @@ p {
 	}
 
 }
+.editTemplate {
+	position: absolute;
+    right: 25px;
+}
+.template-dropdown {
+	padding-right: 50px !important;
+}
+.hover-buttons-td {
+	max-width: 80px;
+    width: 80px;
+}
