--- a/src/app/application-onboarding/application/application-creation/application.component.less
+++ b/src/app/application-onboarding/application/application-creation/application.component.less
@@ -371,3 +371,13 @@ p {
 	max-width: 80px;
     width: 80px;
 }
+.text-delete {
+    color: red !important;
+}
+.template-popup {
+	width: 600px !important;
+}
+
+::ng-deep .template-editor .ace_editor.ace-jsoneditor {
+	min-height: 300px !important;
+}
