--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -572,15 +572,16 @@
                                                   <td class="hover-buttons-td">
                                                     <div class="d-flex  mr-2 align-items-center" *ngIf="toolTypeRowHoverd[i]">
                                                       <span class="ml-2 mt-1">
-                                                        <a class="text-muted formarray_btn" data-toggle="tooltip" data-placement="top" title="Save"
+                                                        <a class="formarray_btn" data-toggle="tooltip" data-placement="top" title="Save"
                                                           (click)="saveConnector(i)">
                                                           <i class="fa fa-save"></i>
                                                         </a>
                                                       </span>
                                                       <span class="ml-2 mt-1">
-                                                        <a class="text-muted formarray_btn" data-toggle="tooltip" data-placement="top" title="Delete"
+                                                        <a class="formarray_btn text-delete" data-toggle="tooltip" data-placement="top" title="Delete"
                                                           (click)="removeConnector(i)">
-                                                          <i class="fas fa-trash-alt"></i></a>
+                                                          <i class="far fa-trash-alt"></i>
+                                                        </a>
                                                       </span>
                                                     </div>
                                                   </td>
@@ -868,7 +869,7 @@
 
 <!-- Modal Matric -->
 <div class="modal bd-example-modal-lg fade" id="newTemplateForTooltype" tabindex="-1" role="dialog" aria-labelledby="newTemplateForTooltypeLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-width" role="document">
+  <div class="modal-dialog modal-dialog-centered modal-width template-popup" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">{{templateEditMode ? 'Edit Template':'New Template'}}</h5>
@@ -889,7 +890,7 @@
           <div class="tab-content" id="myTabContent">
             <div id="tooltype-template-form" role="tabpanel" aria-labelledby="tooltype-template-form-tab">         
               <div class="col-12 maindiv" *ngIf = "selectedTTTemplateTab === 'tooltype-template-form'">
-                <div class="col-6 p-3">
+                <div class="p-3">
                   <form [formGroup]="toolTemplateForm">
                     <div class="form-group">
                       <label>Tool Type:</label>
@@ -909,7 +910,7 @@
                     </div>
                   </form>
                 </div>
-                <div class="col-7 p-3">
+                <div class="p-3">
                   <div class="page_access text-right">
                     <button class="btn btn-primary ml-2" (click)="saveToolTypeTemplateForm()">Save</button>                
                   </div>
@@ -918,9 +919,9 @@
             </div>
             <div id="tooltype-template-editor" role="tabpanel" aria-labelledby="tooltype-template-editor-tab">          
                 <div class="col-12 maindiv" *ngIf = "selectedTTTemplateTab === 'tooltype-template-editor'">
-                  <json-editor [options]="tooltypeTemplateEditor" [data]="tooltypeTemplateData" (change)="getJsonFromTooltypeTemplateEditor($event)"></json-editor>
-                  <div class="col-12">
-                    <button class="btn btn-primary ml-2 savebtn" (click)="saveTooltypeTemplate()">Save</button>
+                  <json-editor class="template-editor" [options]="tooltypeTemplateEditor" [data]="tooltypeTemplateData" (change)="getJsonFromTooltypeTemplateEditor($event)"></json-editor>
+                  <div class="col-12 text-right pr-0">
+                    <button class="btn btn-primary ml-2 savebtn mt-2 mb-2" (click)="saveTooltypeTemplate()">Save</button>
                   </div>
                  </div>            
             </div>
